Fix bug where album name wasn't displaying

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -93,7 +93,7 @@
         sortDivVis = "hidden";
         mode = AVSortMode.NewestDateTaken; //Default
         albumName = GetAlbumName(statAlbumID);
-        NewAlbumName = albumName;
+        _newAlbumName = albumName;
         buttonsVis = "hidden";
     }
 
