--- a/PSS/wwwroot/css/AlbumView.css
+++ b/PSS/wwwroot/css/AlbumView.css
@@ -189,3 +189,93 @@ button span ~ span, button svg ~ span {
     margin-right: 3px;
     margin-top: 3px;
 }
+
+#albumSelector { /* How to center a div: https://stackoverflow.com/a/23703655 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background-color: black;
+    width: 440px;
+    height: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    z-index: 999;
+    border: 1px solid white;
+    padding-right: 2px;
+}
+
+#addToText {
+    color: white;
+    position: absolute;
+    top: 20px;
+    left: 18px;
+}
+
+#closeBtn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+#confirmBtn {
+    position: absolute;
+    top: 5px;
+    right: 60px;
+}
+
+#albums {
+    position: absolute;
+    border: 1px solid white;
+    padding-right: 2px;
+    left: 50%;
+    top: 54%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 405px;
+    height: 420px;
+    overflow-y: scroll;
+}
+
+.album {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: auto;
+}
+
+.album:hover {
+    background-color: darkgreen;
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
+}
+
+.coverDiv {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.cover {
+    border-radius: 4px;
+    object-fit: cover;
+    width: 60px;
+    height: 60px;
+}
+
+.album input[type="checkbox"] {
+    margin-left: 7px;
+}
+
+.album span {
+    margin-top: -1px;
+    margin-left: 6px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
