Remove button should be good

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -15,7 +15,7 @@
         </div>
         
         <button  @onclick="DeleteBtnClick" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" title="Delete Selected"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
-        <button style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
+        <button @onclick="RemoveBtnClick" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
         <button style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" title="Star Selected"><span class="material-icons-outlined">star_outline</span></button>
         <button @onclick="AlbumBtnClick" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" title="Add Selected to Album"><span class="material-icons-outlined">library_add</span></button>
         <span style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" id="selectedAmtText">@selectedItems.Count selected</span>
@@ -150,6 +150,16 @@
         albumMedia = LoadAlbum(statAlbumID, mode);
     }
 
+    private async Task RemoveBtnClick()
+    {
+        foreach (string path in selectedItems.ToList())
+        {
+            RemoveFromAlbum(path, statAlbumID);
+        }
+        await ClearChecks();
+        albumMedia = LoadAlbum(statAlbumID, mode);
+    }
+
     //Functions for album stuff
     private static void AlbumBtnClick() => albumsVis = "visible";
  
@@ -174,7 +184,6 @@
         CloseBtnClick();
         await ClearChecks();
     }
-    
 
     private static void CancelBtnClick()
     {
@@ -191,11 +200,9 @@
             NewAlbumName = "Please enter a name";
     }
         
-    
     private static void ChangeOrder(AVSortMode newMode)
     {
         mode = newMode;
         albumMedia = LoadAlbum(statAlbumID, mode);
-        // sortDivVis = "hidden";
     }
 }
