--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -34,9 +34,8 @@
             </button>
         </div>
     </header>
-
     
-<div id="albumSelector" style="visibility: @albumsVis">
+    <div id="albumSelector" style="visibility: @albumsVis">
         <button id="closeBtn" @onclick="CloseBtnClick" title="Cancel Adding to Albums"><span class="material-icons-outlined">close</span></button>
         <button id="confirmBtn" @onclick="AlbumsConfirmBtnClick" title="Add to Selected Albums"><span class="material-icons-outlined">check</span></button>
         <span id="addToText">Add to</span>
@@ -66,7 +65,7 @@
             {
                 <div class="thumbnail">
                     <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
-                    <img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" onclick="location.href='/view/@media.uuid'" loading="lazy"/>
+                    <a href="/view/@media.uuid"><img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/></a>
                 </div>
             }
          </div>
