--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -44,7 +44,7 @@
             {
                 <div class="thumbnail">
                     <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
-                    <img style="color: white" src="@PSS.Settings.requestPath/@media.path" onclick="location.href='/view/@media.uuid'" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
+                    <a href="/view/@media.uuid"><img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/></a>
                 </div>
             }
         </div>
