Removed a tags and now if at least 1 item selected, clicking img also selects item

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -65,7 +65,7 @@
             {
                 <div class="thumbnail">
                     <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
-                    <a href="/view/@media.uuid"><img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/></a>
+                    <img @onclick="() => ImgClicked(media.uuid.ToString(), media.path)" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
          </div>
@@ -138,6 +138,14 @@
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         selectedItems.Clear();
         albumsVis = "hidden";
+    }
+
+    private async Task ImgClicked(string uuid, string path)
+    {
+        if (selectedItems.Count > 0)
+            await ToggleCheck(path);
+        else
+            navigationManager.NavigateTo($"/view/{uuid}");
     }
 
     private void DeleteAlbumBtnClick()
