--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -1,6 +1,6 @@
 ﻿@page "/trash"
+@inject NavigationManager navigationManager;
 @using static PSS.Backend.Connection
-@using System.IO
 
 <link href="css/Trash.css" rel="stylesheet"/>
 
@@ -25,7 +25,7 @@
             {
                 <div class="thumbnail">
                     <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
-                    <img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
+                    <img @onclick="() => ImgClicked(media.path)" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
         </div>
@@ -59,6 +59,11 @@
         foreach (string item in selectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         selectedItems.Clear();
+    }
+    
+    private async Task ImgClicked(string path)
+    {
+        if (selectedItems.Count > 0) await ToggleCheck(path);
     }
 
     private async Task RestoreBtnClick()
