--- a/PSS/wwwroot/css/ViewNew.css
+++ b/PSS/wwwroot/css/ViewNew.css
@@ -12,7 +12,7 @@
     z-index: 999;
 }
 
-#buttons > button {
+#buttons button {
     background: none;
     color: white;
     border: none;
@@ -22,7 +22,7 @@
     margin: 3px;
 }
 
-#buttons > button:hover {
+#buttons button:hover {
     background-color: rgba(211, 211, 211, 0.1);
     cursor: pointer;
 }
