--- a/PSS/Pages/ViewNew.razor
+++ b/PSS/Pages/ViewNew.razor
@@ -16,18 +16,30 @@
     else
     {
         DateTime dateTaken = Connection.GetDateTaken(Guid.Parse(id));
+        @*Stuff in top right corner*@
         <div id="buttons">
             <button @onclick="@(() => ToggleDropdown(ref infoVis))" title="Show Info"><span class="material-icons-outlined">info</span></button>
             <button title="Delete"><svg width="24px" height="24px" class="material-icons-outlined" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             <button @onclick="@(() => ToggleDropdown(ref moreOptionsVis))"><span class="material-icons-outlined">more_vert</span></button>
         </div>
+        
         <div id="infoDiv" style="visibility: @infoVis">
-            <div>
+            <div title="Date Taken">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
-                <span>@dateTaken.ToString("ddd, MMM d, yyyy h:mm tt")</span>
+                <span>@dateTaken.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
                 <button><span class="material-icons-outlined">edit</span></button>
             </div>
+            
+            <div title="Date Added">
+                <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
+                <span>@Connection.GetDateAdded(Guid.Parse(id)).ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
+            </div>
+            
+            <div>
+                
+            </div>
         </div>
+        
         <div id="moreOptionsDiv" style="visibility: @moreOptionsVis">
             <button title="Star"><span class="material-icons-outlined">star_border</span></button>
             <button title="Add to Album"><span class="material-icons-outlined">collections</span></button>
