--- a/PSS/wwwroot/css/ViewNew.css
+++ b/PSS/wwwroot/css/ViewNew.css
@@ -45,6 +45,7 @@ button:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
+    align-content: center;
     height: 60px;
 }
 
